--- a/style.css
+++ b/style.css
@@ -1,6 +1,44 @@
-.nosto-logo {
-  max-width: 130px;
+/* * * * * * * * * * * * * * * * * * * */
+/* * * * * TABLE OF CONTENTS * * * * * */
+/* * * * * * * * * * * * * * * * * * * */
+/*
+- 01. GLOBAL STYLES (MOBILE FIRST)
+  - 1a Containers & Sections
+
+- 02. TYPOGRAPHY
+  - 2a Body Text
+  - 2b Headings
+  - 2c Navigation & Links
+  - 2d Buttons
+  - 2e Tabs
+
+- 03. ICONS & IMAGES
+
+- 04. MEDIA BREAKPOINTS
+  - 4a Extra small devices (phones, 360px and up)
+  - 4b Small devices (landscape phones, 576px and up)
+  - 4c Medium devices (tablets, 768px and up)
+  - 4d Large devices (desktops, 992px and up)
+  - 4e Extra large devices (large desktops, 1200px and up)
+*/
+/* * * * * * * * * * * * * * * * * * * * * * * * * * */
+/* * * * * 01. GLOBAL STYLES (MOBILE FIRST) * * * * */
+/* * * * * * * * * * * * * * * * * * * * * * * * * * */
+/* 1a CONTAINERS & SECTIONS */
+.hero-section {
+background: url(https://cdn.www.nosto.com/wp-content/uploads/woodhouse-hero.jpg) right center no-repeat;
+background-size: cover;
+display: block;
 }
+
+.hero-section .row {
+  height: 600px;
+}
+
+/* * * * * * * * * * * * * * * * * */
+/* * * * * 02. TYPOGRAPHY * * * * */
+/* * * * * * * * * * * * * * * * * */
+/* 2a BODY TEXT */
 
 body {
   color: #131e28;
@@ -9,15 +47,157 @@ body {
     line-height: 1.75;
 }
 
+a {
+  background-color: transparent;
+}
+
+/* 2b HEADINGS */
+
+/* 2c NAVIGATION */
 .navbar-light .navbar-nav .nav-link,
 .dropdown-item,
 .dropdown-item:focus,
 .dropdown-item:hover {
   font-size: 12px;
   color: #131e28;
+}
+
+.navbar-nav .nav-link {
+  padding-left: 2px;
+  padding-right: 2px;
+}
+
+.nav-item {
+  align-self: center;
   padding: 0 10px;
 }
 
+.dropdown-menu {
+  margin: 0;
+}
+
+.nav-item.dropdown:hover>.dropdown-menu {
+  display: block;
+}
+
+
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  padding: 0 0 1rem;
+}
+
+/* 2d Buttons */
+.nosto-button {
+  background-image: -webkit-gradient(linear, left top, right top, from(#cc0586), to(#7c65ee));
+    background-image: linear-gradient(to right, #cc0586 0%, #7c65ee 100%);
+    background-image: -ms-linear-gradient(to right, #cc0586 0%, #7c65ee 100%);
+    border-radius: 9999px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    color: #131e28;
+    font-weight: 600;
+    display: inline-block;
+    margin: 0 auto;
+    padding: 2px;
+    position: relative;
+    text-decoration: none;
+    z-index: 2;
+    -webkit-transition: all .5s ease;
+    transition: all .5s ease;
+}
+
+.nosto-button span {
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background: white;
+    border-radius: 9999px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    height: 100%;
+    -webkit-transition: background .5s ease;
+    -webkit-transition: all .5s ease;
+    transition: all .5s ease;
+    padding: 10px 16px;
+}
+
+/* 2e Tabs */
+.nav-tabs .nav-item {
+  padding: 0;
+}
+.nav-tabs .nav-link {
+  background-color: #A3A3A3;
+  border: none;
+  color: #A3A3A3;
+  padding: 0 0 0.5rem;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+  background-image: -webkit-gradient(linear, left top, right top, from(#cc0586), to(#7c65ee));
+    background-image: linear-gradient(to right, #cc0586 0%, #7c65ee 100%);
+    background-image: -ms-linear-gradient(to right, #cc0586 0%, #7c65ee 100%);
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    color: #131e28;
+    font-weight: 600;
+    display: inline-block;
+    margin: 0 auto;
+    padding: 0 0 0.5rem;
+    position: relative;
+    text-decoration: none;
+    z-index: 2;
+}
+
+.nav-tabs .nav-link span,
+.nav-tabs .nav-item.show .nav-link span,
+.nav-tabs .nav-link.active span {
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  height: 100%;
+  padding: 10px 16px;
+}
+
+/* * * * * * * * * * * * * * * * * * * */
+/* * * * * 03. ICONS & IMAGES * * * * */
+/* * * * * * * * * * * * * * * * * * * */
+
+.nosto-logo {
+  max-width: 130px;
+}
+
+
+
+/* * * * * * * * * * * * * * * * * * * * */
+/* * * * * 04. MEDIA BREAKPOINTS * * * * */
+/* * * * * * * * * * * * * * * * * * * * */
+/* 4a Extra small devices (phones, 360px and up) */
+/* 4b Small devices (landscape phones, 576px and up) */
+/* 4c Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .navbar-expand-md .navbar-nav .nav-link {
+    padding-right: 2px;
+    padding-left: 2px;
+}
+}
+
+/* 4d Large devices (desktops, 992px and up) */
+
+/* 4e Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
 .container {
     max-width: 1250px;
