--- a/style.css
+++ b/style.css
@@ -26,15 +26,23 @@
 /* * * * * * * * * * * * * * * * * * * * * * * * * * */
 /* 1a CONTAINERS & SECTIONS */
 .hero-section {
-background-attachment: fixed;
-background: url(https://cdn.www.nosto.com/wp-content/uploads/woodhouse-hero.jpg) right center no-repeat;
-background-size: cover;
-display: block;
-margin-top: 56px;
+  background-attachment: fixed;
+  background: url(https://cdn.www.nosto.com/wp-content/uploads/woodhouse-hero.jpg) right center no-repeat;
+  background-size: cover;
+  display: block;
+  margin-top: 56px;
 }
 
 .hero-section .row {
   height: 600px;
+}
+
+.quote-section {
+  background-attachment: fixed;
+  background-image: -webkit-gradient(linear, left top, right top, from(#cc0586), to(#7c65ee));
+  background-image: linear-gradient(to right, #cc0586 0%, #7c65ee 100%);
+  background-image: -ms-linear-gradient(to right, #cc0586 0%, #7c65ee 100%);
+  color: #fff;
 }
 
 /* * * * * * * * * * * * * * * * * */
@@ -44,12 +52,24 @@ margin-top: 56px;
 body {
   color: #131e28;
   font-family: "Gotham A", "Montserrat", Arial, sans-serif;
-    font-size: 14px;
-    line-height: 1.75;
+  font-size: 14px;
+  line-height: 1.75;
 }
 
 a {
   background-color: transparent;
+}
+
+.case-study-stat {
+  color: #7c65ee;
+  font-family: "Arvo", Helvetica, Arial, sans-serif;
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
+.sm-text {
+  font-size: 12px;
+  line-height: 1.3;
 }
 
 /* 2b HEADINGS */
@@ -75,19 +95,6 @@ h3 {
   font-size: 16px;
   line-height: 1.5;
 }
-
-.case-study-title {
-  font-size: 1rem;
-  text-transform: uppercase;
-}
-
-.case-study-stat {
-  color: #7c65ee;
-  font-family: "Arvo", Helvetica, Arial, sans-serif;
-  font-size: 2.5rem;
-  font-weight: 600;
-}
-
 
 /* 2c NAVIGATION */
 .navbar {
@@ -120,8 +127,6 @@ h3 {
   display: block;
 }
 
-
-
 .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
   padding: 0 0 1rem;
 }
@@ -130,52 +135,51 @@ h3 {
 .nosto-button,
 .nosto-button-inverse {
   background-image: -webkit-gradient(linear, left top, right top, from(#cc0586), to(#7c65ee));
-    background-image: linear-gradient(to right, #cc0586 0%, #7c65ee 100%);
-    background-image: -ms-linear-gradient(to right, #cc0586 0%, #7c65ee 100%);
-    border-radius: 9999px;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    color: #131e28;
-    font-weight: 600;
-    display: inline-block;
-    margin: 0 auto;
-    padding: 2px;
-    position: relative;
-    text-decoration: none;
-    z-index: 2;
-    -webkit-transition: all .5s ease;
-    transition: all .5s ease;
+  background-image: linear-gradient(to right, #cc0586 0%, #7c65ee 100%);
+  background-image: -ms-linear-gradient(to right, #cc0586 0%, #7c65ee 100%);
+  border-radius: 9999px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #131e28;
+  font-weight: 600;
+  display: inline-block;
+  margin: 0 auto;
+  padding: 2px;
+  position: relative;
+  text-decoration: none;
+  z-index: 2;
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
 }
 
 .nosto-button-inverse {
-  padding: 12px 24px;
+  padding: 12px 54px;
 }
 
 a.nosto-button:hover,
 a.nosto-button-inverse:hover {
-  background-image: linear-gradient(to right, #cc0586 0%, #cc0586 100%);;
-  color:#fff;
+  background-image: linear-gradient(to right, #cc0586 0%, #cc0586 100%);
+  color: #fff;
   text-decoration: none;
 }
 
-
 .nosto-button span {
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    background: white;
-    border-radius: 9999px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    height: 100%;
-    -webkit-transition: background .5s ease;
-    -webkit-transition: all .5s ease;
-    transition: all .5s ease;
-    padding: 10px 16px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background: white;
+  border-radius: 9999px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  height: 100%;
+  -webkit-transition: background .5s ease;
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+  padding: 10px 16px;
 }
 
 .nosto-button-inverse span,
@@ -188,6 +192,7 @@ a.nosto-button:hover span {
 .nav-tabs .nav-item {
   padding: 0;
 }
+
 .nav-tabs .nav-link {
   background-color: #A3A3A3;
   border: none;
@@ -200,18 +205,18 @@ a.nosto-button:hover span {
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
   background-image: -webkit-gradient(linear, left top, right top, from(#cc0586), to(#7c65ee));
-    background-image: linear-gradient(to right, #cc0586 0%, #7c65ee 100%);
-    background-image: -ms-linear-gradient(to right, #cc0586 0%, #7c65ee 100%);
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    color: #131e28;
-    font-weight: 600;
-    display: inline-block;
-    margin: 0 auto;
-    padding: 0 0 0.5rem;
-    position: relative;
-    text-decoration: none;
-    z-index: 2;
+  background-image: linear-gradient(to right, #cc0586 0%, #7c65ee 100%);
+  background-image: -ms-linear-gradient(to right, #cc0586 0%, #7c65ee 100%);
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #131e28;
+  font-weight: 600;
+  display: inline-block;
+  margin: 0 auto;
+  padding: 0 0 0.5rem;
+  position: relative;
+  text-decoration: none;
+  z-index: 2;
 }
 
 .nav-tabs .nav-link span,
@@ -234,12 +239,14 @@ a.nosto-button:hover span {
 /* * * * * * * * * * * * * * * * * * * */
 /* * * * * 03. ICONS & IMAGES * * * * */
 /* * * * * * * * * * * * * * * * * * * */
-
 .nosto-logo {
   max-width: 130px;
 }
 
-
+/* Quote Icon */
+.quote-section i {
+  font-size: 2.5rem;
+}
 
 /* * * * * * * * * * * * * * * * * * * * */
 /* * * * * 04. MEDIA BREAKPOINTS * * * * */
@@ -251,14 +258,13 @@ a.nosto-button:hover span {
   .navbar-expand-md .navbar-nav .nav-link {
     padding-right: 2px;
     padding-left: 2px;
-}
+  }
 }
 
 /* 4d Large devices (desktops, 992px and up) */
-
 /* 4e Extra large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-.container {
+  .container {
     max-width: 1250px;
-}
+  }
 }
